Fix gap at bottom on screen when mobile landscape.

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,17 @@ html, body {
   font-size:3.5vh;
 }
 
+@media only screen and (max-width: 813px) {
+  #hamburger{
+    margin-top:-40px !important;
+  }
+}
 @media only screen and (max-width: 813px) and (orientation: landscape) {
   .mainH {
     font-size:5vh;
+  }
+  #hamburger{
+    margin-top:-40px !important;
   }
 }
 
